@@ -133,6 +133,7 @@ S3method(makeRLearner,classif.nnTrain)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.pamr)
+S3method(makeRLearner,classif.parallelForest)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
@@ -293,6 +294,7 @@ S3method(predictLearner,classif.nnTrain)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.pamr)
+S3method(predictLearner,classif.parallelForest)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
@@ -501,6 +503,7 @@ S3method(trainLearner,classif.nnTrain)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.pamr)
+S3method(trainLearner,classif.parallelForest)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
