@@ -95,6 +95,7 @@ mlr_2.5:
 -- classif.LiblineaRL1LMultiClassSVC
 -- regr.LiblineaRL2L1SVR
 -- regr.LiblineaRL2L2SVR
+-- classif.parallelForest
 
 - new filters
 -- permutation.importance
